--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:color">#FFFFFF</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:logo">@drawable/ic_launcher_foreground</item>
+    </style>
+
     <style name="Theme.Filmus" parent="android:Theme.Material.Light.NoActionBar" />
+
 </resources>
