--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:color">#FFFFFF</item>
-        <item name="android:windowBackground">@drawable/splash_background</item>
+        <!--                <item name="android:windowIsTranslucent">true</item>-->
+        <item name="android:windowBackground">#404040</item>
         <item name="android:logo">@drawable/ic_launcher_foreground</item>
     </style>
 
